<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:elevation="5dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_above="@id/banner_container"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#B9B8B5B5">
            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:id="@+id/box1"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/plate">
                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        app:ccp_textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/cc"
                        android:inputType="number"
                        android:textSize="12sp"
                        android:visibility="gone"
                        android:drawableStart="@drawable/ic_add"
                        android:backgroundTint="#00000000"
                        android:textColorHint="#706D6D"
                        android:hint="@string/country_code"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/country_code" />

                    <EditText
                        android:id="@+id/mob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/phone_number"
                        android:backgroundTint="#00000000"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:textColorHint="#706D6D"
                        android:textSize="12sp"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/clip"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/clipboard"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/country"
                    android:textSize="12sp" />
                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/plate">

                    <EditText
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:autofillHints="@string/message"
                        android:backgroundTint="#00000000"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textSize="12sp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>
                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/send_via"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/wa"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:checked="true"
                        android:text="@string/whatsapp" />

                    <RadioButton
                        android:id="@+id/wab"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/whatsapp_business" />

                    <RadioButton
                        android:id="@+id/gbwa"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/gb_whatsapp" />
                </RadioGroup>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send"
                    android:text="@string/send"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"/>
</RelativeLayout>